Created Denoised Images and Gradient Map Code

--- a/ResizeData.ipynb
+++ b/ResizeData.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scipy.io as scio\n",
     "import numpy as np    \n",
@@ -39,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/Atrium/H1_N01848_LA_1_388/\n"
+      "/Users/sim/Desktop/Imperial/Project/PreTrained/relaynet_pytorch/datasets/OCTData/Atrium/H1_N01848_LA_1_388/\n"
      ]
     }
    ],
@@ -103,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Rename files in folder\n",
@@ -141,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "make_new_directory = False\n",
@@ -168,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def to_rgb(color):\n",
@@ -263,10 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import webcolors as wb\n",
@@ -288,7 +271,7 @@
     "        blurred=cv2.cvtColor(blur,cv2.COLOR_BGR2HSV)\n",
     "    elif b == \"bilateral\":\n",
     "    # Bilaterial Filter\n",
-    "        blur=cv2.bilateralFilter(img,4,25,25)\n",
+    "        blur=cv2.bilateralFilter(img,5,25,25)\n",
     "        blurred=cv2.cvtColor(blur,cv2.COLOR_BGR2HSV)\n",
     "    return blurred\n",
     "\n",
@@ -474,10 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def produce_images(file_name):\n",
@@ -500,14 +481,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# blurred_image = blur_image(label_image)\n",
+    "blurred_image = blur_image(label_image, 'gaussian')\n",
     "# pprint.pprint(pixel_colors(blurred_image))\n",
+    "show_main_image(blurred_image)\n",
     "# atrium_folder = '/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/png_labels_atrium'\n",
     "# test_image = atrium_folder + '/label_H1_N01848_LA_1_272_labels.png'\n",
     "# test_image = plt.imread(test_image)\n",
@@ -1631,7 +1611,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
