--- a/Sim_Run_Relaynet.ipynb
+++ b/Sim_Run_Relaynet.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9c3ae97bfa3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPIL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -50,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -69,10 +79,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c4f56989b45a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctional\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn.functional as F"
    ]
@@ -87,9 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def relay_out(test_data):\n",
@@ -360,8 +378,8 @@
     "\n",
     "## My adapted code\n",
     "from torch.utils.serialization import load_lua\n",
-    "# model = cwd + '/models/Exp01/relaynet_epoch20.model'\n",
-    "model = cwd + '/models/RawOCT2/relaynet_epoch99.model'\n",
+    "model = cwd + '/models/Exp01/relaynet_epoch20.model'\n",
+    "# model = cwd + '/models/RawOCT2/relaynet_epoch99.model'\n",
     "# model = cwd + '/models/Trained_Networks/layered_segments_normal_bs20_epochs200_01.hdf5'\n",
     "# model = cwd + '/models/relaynet_good.model'\n",
     "\n",
@@ -467,46 +485,46 @@
     }
    ],
    "source": [
-    "used_image = 4\n",
-    "# used_image = 'test_image'\n",
+    "# used_image = 4\n",
+    "# # used_image = 'test_image'\n",
     "\n",
-    "if used_image == 1:\n",
-    "    image_file = '/datasets/ResizedImages'\n",
-    "elif used_image == 2:\n",
-    "    # No ground truth\n",
-    "    image_file = '/datasets/DenoiseImages/DenoisedTrainImages/denoised_5.png'\n",
-    "    # Ventricle\n",
-    "elif used_image == 3:\n",
-    "    image_file = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/con_H1_N01848_LV_1_194.tif'\n",
-    "    gnd_truth_image = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/label_H1_N01848_LV_1_194.JPG'\n",
-    "elif used_image == 4:\n",
-    "    image_file = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/con_H1_N01848_LA_1_272.tif'\n",
-    "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
-    "elif used_image == 5:\n",
-    "    image_file = '/datasets/con_H1_N01848_LA_1_272_denoised.png'\n",
-    "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
-    "elif used_image == 'test_image':\n",
-    "    image_file = '/datasets/test_image.png'\n",
+    "# if used_image == 1:\n",
+    "#     image_file = '/datasets/ResizedImages'\n",
+    "# elif used_image == 2:\n",
+    "#     # No ground truth\n",
+    "#     image_file = '/datasets/DenoiseImages/DenoisedTrainImages/denoised_5.png'\n",
+    "#     # Ventricle\n",
+    "# elif used_image == 3:\n",
+    "#     image_file = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/con_H1_N01848_LV_1_194.tif'\n",
+    "#     gnd_truth_image = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/label_H1_N01848_LV_1_194.JPG'\n",
+    "# elif used_image == 4:\n",
+    "#     image_file = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/con_H1_N01848_LA_1_272.tif'\n",
+    "#     gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
+    "# elif used_image == 5:\n",
+    "#     image_file = '/datasets/con_H1_N01848_LA_1_272_denoised.png'\n",
+    "#     gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
+    "# elif used_image == 'test_image':\n",
+    "#     image_file = '/datasets/test_image.png'\n",
     "\n",
-    "# Seeing whether image_file exists\n",
-    "raw_image_path = cwd + image_file\n",
-    "image = plt.imread(raw_image_path)\n",
-    "test_data = image    \n",
+    "# # Seeing whether image_file exists\n",
+    "# raw_image_path = cwd + image_file\n",
+    "# image = plt.imread(raw_image_path)\n",
+    "# test_data = image    \n",
     "\n",
-    "if used_image == 'test_image':\n",
-    "    test_data = test_data[:400,:400, 0]\n",
+    "# if used_image == 'test_image':\n",
+    "#     test_data = test_data[:400,:400, 0]\n",
     "\n",
-    "print(test_data.shape)\n",
-    "plt.imshow(test_data,cmap = \"gray\")\n",
-    "plt.show()\n",
+    "# print(test_data.shape)\n",
+    "# plt.imshow(test_data,cmap = \"gray\")\n",
+    "# plt.show()\n",
     "\n",
-    "if used_image == 3 or used_image == 4 or used_image == 5:\n",
-    "    # Seeing whether labelled_image exists\n",
-    "    label_image_path = cwd + gnd_truth_image\n",
-    "    gnd_truth = plt.imread(label_image_path)\n",
-    "    print(gnd_truth.shape)\n",
-    "    plt.imshow(gnd_truth)\n",
-    "    plt.show()"
+    "# if used_image == 3 or used_image == 4 or used_image == 5:\n",
+    "#     # Seeing whether labelled_image exists\n",
+    "#     label_image_path = cwd + gnd_truth_image\n",
+    "#     gnd_truth = plt.imread(label_image_path)\n",
+    "#     print(gnd_truth.shape)\n",
+    "#     plt.imshow(gnd_truth)\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -937,7 +955,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
