--- a/Sim_Train_ReLayNet.ipynb
+++ b/Sim_Train_ReLayNet.ipynb
@@ -300,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
