--- a/Whole_TF_ReLayNet.ipynb
+++ b/Whole_TF_ReLayNet.ipynb
@@ -1760,7 +1760,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
