Updated Normalise File

--- a/Normalise.ipynb
+++ b/Normalise.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Useful Links\n",
+    "https://stackoverflow.com/questions/41979481/mean-pixel-subtraction-for-numpy-array\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
