--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -1290,7 +1290,20 @@
     "# Creating set.h5 File\n",
     "sets = np.ones((1,N))\n",
     "split = N * 0.8\n",
-    "sets[:,int(split):] = 3\n",
+    "\n",
+    "num_files = N\n",
+    "validation_cutoff = int(split)\n",
+    "\n",
+    "# Making training set random\n",
+    "train_indices = np.random.choice(num_files,validation_cutoff,replace = False)\n",
+    "print(train_indices)\n",
+    "test_indices = [x for x in range(num_files) if x not in train_indices]\n",
+    "print(test_indices)\n",
+    "for count,i in enumerate(sets[0]):\n",
+    "    if count not in train_indices:\n",
+    "        sets[0][count] = 3\n",
+    "\n",
+    "# sets[:,int(split):] = 3\n",
     "\n",
     "hf = h5py.File('/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/set.h5', 'w')\n",
     "hf.create_dataset('set', data=sets)\n",
