--- a/Sim_Run_Relaynet.ipynb
+++ b/Sim_Run_Relaynet.ipynb
@@ -378,8 +378,8 @@
     "\n",
     "## My adapted code\n",
     "from torch.utils.serialization import load_lua\n",
-    "model = cwd + '/models/Exp01/relaynet_epoch20.model'\n",
-    "# model = cwd + '/models/RawOCT2/relaynet_epoch99.model'\n",
+    "# model = cwd + '/models/Exp01/relaynet_epoch20.model'\n",
+    "model = cwd + '/models/RawOCT2/relaynet_epoch99.model'\n",
     "# model = cwd + '/models/Trained_Networks/layered_segments_normal_bs20_epochs200_01.hdf5'\n",
     "# model = cwd + '/models/relaynet_good.model'\n",
     "\n",
@@ -485,46 +485,46 @@
     }
    ],
    "source": [
-    "# used_image = 4\n",
-    "# # used_image = 'test_image'\n",
+    "used_image = 4\n",
+    "# used_image = 'test_image'\n",
     "\n",
-    "# if used_image == 1:\n",
-    "#     image_file = '/datasets/ResizedImages'\n",
-    "# elif used_image == 2:\n",
-    "#     # No ground truth\n",
-    "#     image_file = '/datasets/DenoiseImages/DenoisedTrainImages/denoised_5.png'\n",
-    "#     # Ventricle\n",
-    "# elif used_image == 3:\n",
-    "#     image_file = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/con_H1_N01848_LV_1_194.tif'\n",
-    "#     gnd_truth_image = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/label_H1_N01848_LV_1_194.JPG'\n",
-    "# elif used_image == 4:\n",
-    "#     image_file = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/con_H1_N01848_LA_1_272.tif'\n",
-    "#     gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
-    "# elif used_image == 5:\n",
-    "#     image_file = '/datasets/con_H1_N01848_LA_1_272_denoised.png'\n",
-    "#     gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
-    "# elif used_image == 'test_image':\n",
-    "#     image_file = '/datasets/test_image.png'\n",
+    "if used_image == 1:\n",
+    "    image_file = '/datasets/ResizedImages'\n",
+    "elif used_image == 2:\n",
+    "    # No ground truth\n",
+    "    image_file = '/datasets/DenoiseImages/DenoisedTrainImages/denoised_5.png'\n",
+    "    # Ventricle\n",
+    "elif used_image == 3:\n",
+    "    image_file = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/con_H1_N01848_LV_1_194.tif'\n",
+    "    gnd_truth_image = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/label_H1_N01848_LV_1_194.JPG'\n",
+    "elif used_image == 4:\n",
+    "    image_file = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/con_H1_N01848_LA_1_272.tif'\n",
+    "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
+    "elif used_image == 5:\n",
+    "    image_file = '/datasets/con_H1_N01848_LA_1_272_denoised.png'\n",
+    "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
+    "elif used_image == 'test_image':\n",
+    "    image_file = '/datasets/test_image.png'\n",
     "\n",
-    "# # Seeing whether image_file exists\n",
-    "# raw_image_path = cwd + image_file\n",
-    "# image = plt.imread(raw_image_path)\n",
-    "# test_data = image    \n",
+    "# Seeing whether image_file exists\n",
+    "raw_image_path = cwd + image_file\n",
+    "image = plt.imread(raw_image_path)\n",
+    "test_data = image    \n",
     "\n",
-    "# if used_image == 'test_image':\n",
-    "#     test_data = test_data[:400,:400, 0]\n",
+    "if used_image == 'test_image':\n",
+    "    test_data = test_data[:400,:400, 0]\n",
     "\n",
-    "# print(test_data.shape)\n",
-    "# plt.imshow(test_data,cmap = \"gray\")\n",
-    "# plt.show()\n",
+    "print(test_data.shape)\n",
+    "plt.imshow(test_data,cmap = \"gray\")\n",
+    "plt.show()\n",
     "\n",
-    "# if used_image == 3 or used_image == 4 or used_image == 5:\n",
-    "#     # Seeing whether labelled_image exists\n",
-    "#     label_image_path = cwd + gnd_truth_image\n",
-    "#     gnd_truth = plt.imread(label_image_path)\n",
-    "#     print(gnd_truth.shape)\n",
-    "#     plt.imshow(gnd_truth)\n",
-    "#     plt.show()"
+    "if used_image == 3 or used_image == 4 or used_image == 5:\n",
+    "    # Seeing whether labelled_image exists\n",
+    "    label_image_path = cwd + gnd_truth_image\n",
+    "    gnd_truth = plt.imread(label_image_path)\n",
+    "    print(gnd_truth.shape)\n",
+    "    plt.imshow(gnd_truth)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -813,46 +813,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metrics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Dice Score\n",
-    "\n",
-    "Source: https://stats.stackexchange.com/questions/195006/is-the-dice-coefficient-the-same-as-accuracy\n",
-    "\n",
-    "* Dice Score: relaynet_pytorch - solver.py in train function.\n",
-    "* Dice Score: networks -> net_api -> losses.py in class DiceCoeff as well as DiceLoss\n",
-    "* TF Dice Score: Line 42 in ReLayNey_model.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from networks import net_api\n",
-    "from networks.net_api import losses\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# def dice_coef(true, pred):\n",
-    "\n",
-    "# avg_dice = per_class_dice(batch_output, y, self.NumClass)\n",
-    "# print('Per class average dice score is ' + str(avg_dice))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data types"
    ]
   },
@@ -932,24 +892,6 @@
     "# relaynet_model.eval()\n",
     "# dummy_input = Variable(torch.cuda.FloatTensor(1,1,600,64)) # has to be (1,1,...) because the first is no. therefore can't plot 2d image on same plot.\n",
     "# torch.onnx.export(relaynet_model, dummy_input, \"model.onnx\", verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Open Matlab Files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# import scipy.io as sio"
    ]
   }
  ],
