--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -510,8 +510,9 @@
     "    true_thickness = []\n",
     "    pred_thickness = []\n",
     "    class_error = []\n",
+    "    # For each col, find thickness, compare to actual thickness and sum errors \n",
     "    for j in range(N):\n",
-    "        true_col = true_labels[:,j,i] \n",
+    "        true_col = true_labels[:,j,i] # finding number of values in col, go down axis i.e. index of axis\n",
     "        pred_col = pred_labels[:,j,i] \n",
     "\n",
     "        true_width = numpy.count_nonzero(true_col) # count number of 1s\n",
@@ -540,22 +541,6 @@
     "          '\\nSSIM: {}\\n'\\\n",
     "          .format(i,avg_true_thickness,avg_pred_thickness,mean_abs_error, mean_squared_error, s))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Estimated Contour Error\n",
-    "\n",
-    "Distance (Euclidean) between Ground Truth and Where my Segments are"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -607,6 +592,22 @@
     "    dice = round(dice,3)\n",
     "    print('Dice similarity score is {}'.format(dice))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimated Contour Error\n",
+    "\n",
+    "Distance (Euclidean) between Ground Truth and Where my Segments are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
